# spotify-data

./: .gitignore  Dockerfile  README.md  requirements.txt
container/: main.py
container/spotify_elt/: Dockerfile  README.md  entrypoint.py  helpers.py  pyproject.toml
container/spotify_elt/modules/: entrypoint.py
container/spotify_elt/modules/client/: gcp.py  gcs.py  spotify.py
container/spotify_elt/modules/tests/unit/: test_gcs.py
container/spotify_elt/modules/utils/: helpers.py
workflows/: build_container.yml
